[gd_scene load_steps=6 format=2]

[ext_resource path="res://BaseFarmGrid.gd" type="Script" id=1]
[ext_resource path="res://PlantingNotifier.tscn" type="PackedScene" id=2]
[ext_resource path="res://Farm.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=5]

[node name="BaseFarmGrid" type="Node"]
script = ExtResource( 1 )
Tree = ExtResource( 4 )

[node name="Farm" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1e-05, 1e-05 )

[node name="PlantingNotifier" parent="." instance=ExtResource( 2 )]

[node name="Inventory" parent="." instance=ExtResource( 5 )]
[connection signal="new_farm" from="Farm" to="PlantingNotifier" method="show_message"]
[connection signal="plant" from="Farm" to="." method="_plant_tree"]
[connection signal="plot_clicked" from="Farm" to="PlantingNotifier" method="show_message"]
[connection signal="tree_control" from="Farm" to="PlantingNotifier" method="_open_tree_control_menu"]
[connection signal="tree_removed" from="Farm" to="PlantingNotifier" method="show_message"]
[connection signal="clear" from="PlantingNotifier" to="." method="_new_farm"]
[connection signal="clear_single" from="PlantingNotifier" to="." method="_new_plot"]
[connection signal="close_menu" from="PlantingNotifier" to="." method="_open_inventory"]
[connection signal="close_menu" from="PlantingNotifier" to="Farm" method="_close_menu"]
[connection signal="exit_farm" from="PlantingNotifier" to="." method="_exit_farm"]
[connection signal="plant_air" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_bunny" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_cotton_candy" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_earth" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_fire" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_lightning" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_magma" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_snoop" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="plant_water" from="PlantingNotifier" to="." method="_select_tree"]
[connection signal="water_tree" from="PlantingNotifier" to="." method="_water_tree"]
[connection signal="air_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_AirTree_pressed"]
[connection signal="bunny_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_BunnyTree_pressed"]
[connection signal="cotton_candy_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_CottonCandyTree_pressed"]
[connection signal="earth_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_EarthTree_pressed"]
[connection signal="fire_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_FireTree_pressed"]
[connection signal="lightning_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_LightningTree_pressed"]
[connection signal="magma_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_MagmaTree_pressed"]
[connection signal="snoop_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_SnoopTree_pressed"]
[connection signal="water_tree_pressed" from="Inventory" to="PlantingNotifier" method="_on_WaterTree_pressed"]
